--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -13,3 +13,7 @@ body {
 	font-feature-settings: "lnum" 1;
 	font-size: 62.5%;
 }
+
+canvas {
+	max-width: 100%;
+}
