--- a/scss/base/_layout.scss
+++ b/scss/base/_layout.scss
@@ -23,6 +23,7 @@ header {
 	position: sticky;
 	top: 0px;
 	z-index: 100;
+	flex-wrap: wrap;
 }
 
 nav {
